--- a/js/js-deps/package.json
+++ b/js/js-deps/package.json
@@ -26,11 +26,13 @@
   "dependencies": {
     "@msgpack/msgpack": "^2.5.1",
     "@randlabs/myalgo-connect": "^1.1.1",
+    "@types/cors": "^2.8.12",
     "@types/spdy": "^3.4.5",
     "@walletconnect/client": "^1.6.5",
     "algorand-walletconnect-qrcode-modal": "^1.6.1",
     "algosdk": "^1.12.0",
     "await-timeout": "^0.6.0",
+    "cors": "^2.8.5",
     "ethers": "^5.4.7",
     "express": "^4.17.1",
     "hi-base32": "^0.5.0",
